libs/@local/hashql/ast/tests/ui/lower/special-form-expander/as-3.jsonc
//@ run: fail
//@ description: is/3 should error out
[
  "::kernel::special_form::as",
  { "#literal": true },
  { "#literal": true },
  { "#literal": true }
  //~^ ERROR Remove this argument
]
